--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ body > h1{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;opacity: 0.2;
+  background-color: white ;opacity: 0.6;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -91,5 +91,6 @@ h2{
 }
 
 img{
+  margin-bottom: 10vh;
   visibility: hidden;
 }
