new images and css

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html{
 body{
   display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-direction: column;
   height: 98vh;
   width: 100vw;
@@ -79,6 +80,7 @@ img{
 #keys{
   display: flex;
   gap: 2px;
+  place-content: end;
 }
 
 #keys > button{
