--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-html{
+html {
   height: 100%;
   width: 100%;
   background-image: url(https://wallpapers.com/images/hd/interstellar-endurance-at-gargantua-al7pib6oup072coa.jpg);
@@ -6,7 +6,7 @@ html{
   justify-content: center;
 }
 
-body{
+body {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -14,18 +14,18 @@ body{
   height: 98vh;
   width: 100vw;
   border: 2px solid white;
-  border-radius: 10px
+  border-radius: 10px;
 }
 
-body > h1{
-  font-family: 'Orbitron', sans-serif;
+body > h1 {
+  font-family: "Orbitron", sans-serif;
   justify-content: center;
   color: white;
 }
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: skyblue ;
+  background-color: skyblue;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -42,9 +42,10 @@ body > h1{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: white ;opacity: 0.6;
+  background-color: white;
+  opacity: 0.6;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -57,42 +58,49 @@ body > h1{
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: deepskyblue;}
+.dropdown:hover .dropbtn {
+  background-color: deepskyblue;
+}
 
-img{
+img {
   width: 75px;
   height: 100px;
 }
 
-#board{
+#board {
   color: white;
   font-size: 75px;
   letter-spacing: 10px;
-  margin: 15vh  0;
+  margin: 15vh 0;
+  font-family: "Orbitron",sans-serif;
 }
 
-#keys{
+#keys {
   display: flex;
   gap: 2px;
   place-content: end;
 }
 
-#keys > button{
+#keys > button {
   height: 5vh;
   width: 3vw;
 }
 
-h2{
+h2 {
   color: white;
 }
 
-img{
+img {
   margin-bottom: 10vh;
   visibility: hidden;
 }
